* Added Workaround for %20 issue in gstreamer.

--- a/src/app/views/account/account-scene.html
+++ b/src/app/views/account/account-scene.html
@@ -168,11 +168,34 @@
         </div>
         
         
-        
-
+        <div class="palm-group">
+             <div class="palm-group-title" x-mojo-loc=''>
+                Work Arounds
+            </div>
+    
+            <div class="palm-list">
+                <div class="palm-row first last" x-mojo-tap-highlight="momentary">
+                    <div class="palm-row-wrapper">
+                        <table class="palm-list-section-label">
+                            <tr>
+                                 <td  class="label" width=85%><span style="text-align:left;" class="palm-text-wrapper"  x-mojo-loc="">Fix URL Spaces</span></td>
+    
+                                 <td width=15%>
+                                    <div id="spaces-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
         
         
     </div>
+    
+    
+    
+    
     <div id="saved-info">
          <div class="palm-group">
             <div class="palm-group-title">
