--- a/trunk/src/app/views/now-playing/button-help.html
+++ b/trunk/src/app/views/now-playing/button-help.html
@@ -34,7 +34,7 @@
       
       <tr>
             <td class="help-button">
-            15 Sec Skip Back      
+            10 Sec&nbsp;&nbsp; Skip Back      
             </td>
             
             <td class="help-button">
@@ -47,7 +47,7 @@
             Next Track
             </td>
             <td class="help-button">
-            15 Sec Skip Fwd
+            10 Sec Skip Fwd
             </td>
       </tr>
       
