--- a/trunk/src/app/views/recent/datepicker-dialog.html
+++ b/trunk/src/app/views/recent/datepicker-dialog.html
@@ -1,4 +1,4 @@
-<div id="palm-dialog-content" class="palm-dialog-content">
+<div>
 	<div id="date-dialog-title" class="palm-dialog-title" x-mojo-loc=''>
 		Choose a date...
 	</div>
