--- a/trunk/src/app/views/whatsnew/new-version.html
+++ b/trunk/src/app/views/whatsnew/new-version.html
@@ -1,6 +1,6 @@
 
      <div class="new-version-header">
-         Version 0.9.0 (Alpha 4) (04/08/2010)
+         Version 0.9.0 (04/12/2010)
      </div><br>
 
 <ul class="new-version-list">
@@ -74,5 +74,7 @@
 <div class="new-version-header"><b>Bug Fixes</b> </div>
 
 <ul class="new-version-list">
-  <li>None</li>
+  <li>Fixed date selector CSS so its no longer black on black with palm-dark</li>
+  <li>Added work around for %20 (spaces) in song URL issue.  If you have been having trouble streaming enable it in the Account Editor</li>
+  
 </ul>
