* JS Lint Fixes

--- a/src/app/views/account/account-scene.html
+++ b/src/app/views/account/account-scene.html
@@ -178,7 +178,7 @@
                     <div class="palm-row-wrapper">
                         <table class="palm-list-section-label">
                             <tr>
-                                 <td  class="label" width=85%><span style="text-align:left;" class="palm-text-wrapper"  x-mojo-loc="">Fix URL Spaces</span></td>
+                                 <td  class="label" width=85%><span style="text-align:left;" class="palm-text-wrapper"  x-mojo-loc="">GSTREAMER %20</span></td>
     
                                  <td width=15%>
                                     <div id="spaces-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
