--- a/src/app/views/account/account-scene.html
+++ b/src/app/views/account/account-scene.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
     
-                <div class="palm-row" x-mojo-tap-highlight="momentary">
+                <div class="palm-row last" x-mojo-tap-highlight="momentary">
                     <div class="palm-row-wrapper">
                         <table class="palm-list-section-label">
                             <tr>
@@ -104,19 +104,7 @@
                 </div>
     
     
-                <div class="palm-row last" x-mojo-tap-highlight="momentary">
-                    <div class="palm-row-wrapper">
-                        <div class="palm-row-wrapper textfield-group" x-mojo-focus-highlight="true">
-                        <div class="title">
-                            <div class="label" x-mojo-loc=''>
-                                Apache Timeout
-                            </div>
-    
-                            <div id="apache-timeout" x-mojo-element="TextField"></div>
-                        </div>
-                    </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     
@@ -174,7 +162,7 @@
             </div>
     
             <div class="palm-list">
-                <div class="palm-row first last" x-mojo-tap-highlight="momentary">
+                <div class="palm-row first" x-mojo-tap-highlight="momentary">
                     <div class="palm-row-wrapper">
                         <table class="palm-list-section-label">
                             <tr>
@@ -188,6 +176,20 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="palm-row last" x-mojo-tap-highlight="momentary">
+                    <div class="palm-row-wrapper">
+                        <div class="palm-row-wrapper textfield-group" x-mojo-focus-highlight="true">
+                        <div class="title">
+                            <div class="label" x-mojo-loc=''>
+                                Apache Timeout
+                            </div>
+    
+                            <div id="apache-timeout" x-mojo-element="TextField"></div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
         </div>
         
         
