--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -1,80 +1,28 @@
-
-     <div class="new-version-header">
-         Version 0.9.0 (04/12/2010)
-     </div><br>
+<div class="new-version-header">
+    Version 0.9.1 (04/12/2010)
+</div><br>
 
 <ul class="new-version-list">
-  <li>Buffer Ahead! (thanks for waiting) 
-    <ul class="new-version-list">
-      <li>Configurable from 1 to 5 songs </li>
+    <li>Place Holder
 
-      <li>This is true buffer ahead, using system RAM. Other solutions download to flash, which is bad for your device. </li>
-
-      <li>Intelligent buffer selection, attempts to provide seamless playback with no downloading break between tracks. </li>
-
-      <li>Many work arounds for bugs in webOS, don't think many people have attempted to use webOS in this way. </li>
-
-      <li>Auto Detection of changes in network coverage and buffer stalls </li>
-
-      <li>Auto Detection of buffers lost due to device sleep </li>
-
-      <li>I've done my best to make this stable without transcoding, but it really shines when you enable it with transcoding. </li>
-
-      <li>Settings in the Accounts Settings Page </li>
-      <li>Updated the error reporting to follow the new audio api</li>
-    </ul>
-  </li>
-
-  <li>Artists and Albums List Caching 
-    <ul class="new-version-list">
-      <li>Saves a local copy of your entire albums and artists lists, load times are ridiculous! </li>
-
-      <li>Auto detects when a change to your server occurs and resaves the lists. Note: if you have auto scanning enabled on your server this will cause the list to redownload after every scan. </li>
-
-      <li>Only applies to full Albums and Artist lists, everything else still goes against the server. </li>
-       <li>Updated account editior to reflect how many saved items you have</li>
-    </ul>
-  </li>
-  
-  <li>New Icon and Splash Screen 
-    <ul class="new-version-list">
-      <li>Lets face it, the old icon is kinda ugly. Thankfully forum contributor Globex has stepped up and volunteered his services and designed a new one along with anew splash screen!
-      
-      <br><br>It still pays homage to the people at the Ampache project, aka it features their squirrel logo but I hope you agree with me, it looks a lot better on the phone.
-
-        <br><br>So a big thanks to <a href="http://www.globexdesigns.com/">Globex Designs, Inc.</a> for the new icon.</li>
-
-    </ul>
-  </li>
-  
+        <ul class="new-version-list">
+            <li>Place Holder</li>
+        </ul>
+    </li>
 </ul>
 
-<div class="new-version-header"><b>Improvements</b> </div>
+<div class="new-version-header">
+    <b>Improvements</b>
+</div>
 
 <ul class="new-version-list">
-  <li>Figured out how to use the Shift and Sym Keys, updated the controls popup with changes. </li>
-
-  <li>Lowered the search character limit to 2. </li>
-
-  <li>Redesign of the Accounts Settings Page to Accommodate all the new options. </li>
-
-  <li>Added a whole more shuffle to the playlist shuffle. </li>
-
-  <li>Changed repeat list once to repeat song. </li>
-
-  <li>Banner notifications where they felt right. </li>
-
-  <li>Shuffling a list now displays the list in the order playback will occur. </li>
-  <li>Banner Notifications of new songs when you are looking at another app.  Will not wake up screen if its asleep.</li>
-  <li>Go straight to songs view from artists if there is only one album</li>
-  
-  
+    <li>Added Donate Button to About Screen</li>
 </ul>
 
-<div class="new-version-header"><b>Bug Fixes</b> </div>
+<div class="new-version-header">
+    <b>Bug Fixes</b>
+</div>
 
 <ul class="new-version-list">
-  <li>Fixed date selector CSS so its no longer black on black with palm-dark</li>
-  <li>Added work around for %20 (spaces) in song URL issue.  If you have been having trouble streaming enable it in the Account Editor</li>
-  
+    <li>Reset Stall detection when buffer loss is detected</li>
 </ul>
