--- a/src/app/views/preferences/preferences-scene.html
+++ b/src/app/views/preferences/preferences-scene.html
@@ -1,4 +1,4 @@
-<div id="main" class="palm-hasheader preferences">
+<div id="prefs-main" class="palm-hasheader preferences">
     <div id="header" class="palm-header left truncating-text">
         <div class="palm-header-wrapper">
             <div class='header-body'>
@@ -10,6 +10,8 @@
             </div>
         </div>
     </div>
+
+    <div id="spacerDiv" class="music-header-spacer"></div>
 
     <div x-mojo-element="RadioButton" id="preference-type" class="radiobuttonClass"></div>
 
@@ -182,7 +184,7 @@
                     <div class="palm-row-wrapper">
                         <table class="palm-list-section-label">
                             <tr>
-                                <td width="85%"><span class="palm-text-wrapper" x-mojo-loc="">Stream Debug</span></td>
+                                <td class="label" width="85%">Stream Debug</td>
 
                                 <td width="15%">
                                     <div id="stream-debug-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
@@ -196,7 +198,7 @@
                     <div class="palm-row-wrapper">
                         <table class="palm-list-section-label">
                             <tr>
-                                <td width="85%"><span class="palm-text-wrapper" x-mojo-loc="">Allow Rotation</span></td>
+                                <td class="label" width="85%">Allow Rotation</td>
 
                                 <td width="15%">
                                     <div id="rotation-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
