--- a/trunk/src/app/views/new-users/new-users-scene.html
+++ b/trunk/src/app/views/new-users/new-users-scene.html
@@ -99,7 +99,7 @@
 			<br>
 			<b>Audio Stall Detection:</b> Enable this your if music simply stops, Ampache Mobile will detect a stall and attempt to recover.<br>
 			<br>
-			<b>Apache Timeout:</b> Default is 300, Ampache Mobile will attempt to detect potential timeouts and circumvent them. Improper configuration of this value will result in audio stalls.
+			<b>Apache Timeout:</b> This is the <a href="http://httpd.apache.org/docs/2.0/mod/core.html#timeout">tcp timeout</a> of your webserver.  Ampache Mobile will attempt to detect potential timeouts and circumvent them. Improper configuration of this value will result in audio stalls.  Default is 300
 		</div>
 	</div>
 </div>
