--- a/trunk/src/app/views/songs/listitem_w_artist.html
+++ b/trunk/src/app/views/songs/listitem_w_artist.html
@@ -5,7 +5,7 @@
                 <div class="songTitle truncating-text">#{-title}</div>
             </div>
             <div class="truncating-text songDesc truncating-text">
-                #{-artist}&nbsp;-&nbsp;#{-album}<!--<a href="#" class="link" id='link_artist_#{-artist_id}'>#{-artist}</a>
+                #{-artist}&nbsp;-&nbsp;#{-album}&nbsp;-&nbsp;#{-track}<!--<a href="#" class="link" id='link_artist_#{-artist_id}'>#{-artist}</a>
                 &nbsp;-&nbsp;
                 <a href="#" class="link" id='link_album_#{-album_id}'>#{-album}</a>-->
             </div>
