--- a/src/app/views/whatsnew/old-versions.html
+++ b/src/app/views/whatsnew/old-versions.html
@@ -1,3 +1,32 @@
+<div class="new-version-header">
+    Version 0.9.1 (04/17/2010)
+</div><br>
+
+
+
+<div class="new-version-header">
+    <b>Improvements</b>
+</div>
+
+<ul class="new-version-list">
+    <li>Updates to Help Scene, including Check for Update, User Guide and App Introduction</li>
+    <li>Made stall/crash recovery optional, configurable in account editor.  Default:On</li>
+    <li>Added Donate Button to About Screen</li>
+    <li>Tweaked stall detection for less false positives</li>
+    <li>Fixed formatting on account editor</li>
+</ul>
+
+<div class="new-version-header">
+    <b>Bug Fixes</b>
+</div>
+
+<ul class="new-version-list">
+    <li>Reset Stall detection when buffer loss is detected</li>
+    <li>Fixed orange key on search causing scene to exit</li>
+    <li>Fixed load albums from the genre page</li>
+    <li>Fixed a bug which caused the playlist and buffer ahead to die</li>
+</ul>
+
 
      <div class="new-version-header">
          Version 0.9.0 (04/12/2010)
