--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -1,27 +1,16 @@
 <div class="new-version-header">
-    Version 0.9.1 (04/17/2010)
+    Version 0.9.2 (04/21/2010)
 </div><br>
 
 
-<!--<ul class="new-version-list">-->
-<!--    <li>Place Holder-->
-<!---->
-<!--        <ul class="new-version-list">-->
-<!--            <li>Place Holder</li>-->
-<!--        </ul>-->
-<!--    </li>-->
-<!--</ul>-->
 
 <div class="new-version-header">
     <b>Improvements</b>
 </div>
 
 <ul class="new-version-list">
-    <li>Updates to Help Scene, including Check for Update, User Guide and App Introduction</li>
-    <li>Made stall/crash recovery optional, configurable in account editor.  Default:On</li>
-    <li>Added Donate Button to About Screen</li>
-    <li>Tweaked stall detection for less false positives</li>
-    <li>Fixed formatting on account editor</li>
+    <li>Sorting: Tap and Hold the Header on any list to bring up a sort menu. Only the Albums Sort saves its state.</li>
+    <li>Jump: Added Jump to Top/Bottom on Songs, Genre and Playlist screens</li>
 </ul>
 
 <div class="new-version-header">
@@ -29,8 +18,5 @@
 </div>
 
 <ul class="new-version-list">
-    <li>Reset Stall detection when buffer loss is detected</li>
-    <li>Fixed orange key on search causing scene to exit</li>
-    <li>Fixed load albums from the genre page</li>
-    <li>Fixed a bug which caused the playlist and buffer ahead to die</li>
+    <li>Playback errors sometime broke the now playing list</li>
 </ul>
