--- a/trunk/src/app/views/new-users/new-users-scene.html
+++ b/trunk/src/app/views/new-users/new-users-scene.html
@@ -15,10 +15,32 @@
 
 	<div class="palm-group">
 		<div class="palm-group-title" x-mojo-loc="x-mojo-loc">
+			Server
+		</div>
+
+		<div style="margin: 0px" class="palm-body-text condensed" x-mojo-loc="x-mojo-loc">
+			
+			
+			
+			<strong>Transcoding</strong>
+			<hr>
+			The first thing you should do with your server, once you have it working, is enable transcoding.  It will allow songs to load much faster and buffer ahead will also function much better.<br>
+			<br>
+			It will also allow you play music from format not currently supported by webOS.
+			<br>
+				
+		</div>
+	</div>
+
+
+	<div class="palm-group">
+		<div class="palm-group-title" x-mojo-loc="x-mojo-loc">
 			Navigation
 		</div>
 
 		<div style="margin: 0px" class="palm-body-text condensed" x-mojo-loc="x-mojo-loc">
+			
+			
 			<strong>Searching</strong>
 			<hr>
 			There are multiple ways to search in Ampache Mobile. You can just start typing on any list being displayed and it will filter the results.<br>
