--- a/trunk/src/app/views/whatsnew/new-version.html
+++ b/trunk/src/app/views/whatsnew/new-version.html
@@ -1,6 +1,6 @@
-<div class="new-version-header">
+<hr><div class="new-version-header">
     Version 0.9.2 (04/21/2010)
-</div><br>
+</div><hr>
 
 
 
@@ -18,5 +18,7 @@
 </div>
 
 <ul class="new-version-list">
-    <li>Playback errors sometime broke the now playing list</li>
+	<li>Infinite loop in now playing screen caused the app to lock up, resulting in audio stall detection.</li>    
+    <li>Playback errors sometime broke the now playing list.</li>
+	<li>Fixed Check for Updates so it doesn't have to launch the browser.</li>
 </ul>
