--- a/src/app/views/new-users/new-users-scene.html
+++ b/src/app/views/new-users/new-users-scene.html
@@ -24,9 +24,9 @@
 			
 			<strong>Transcoding</strong>
 			<hr>
-			The first thing you should do with your server, once you have it working, is enable transcoding.  It will allow songs to load much faster and buffer ahead will also function much better.<br>
-			<br>
-			It will also allow you play music from format not currently supported by webOS.
+			The first thing you should do with your server, once you have it working, is enable transcoding/downsampling.
+			Transcoding allows you to play audio formats not support by webOS,
+			downsampling will allow songs to load much faster and buffer ahead will also function much better.<br>
 			<br>
 				
 		</div>
@@ -48,6 +48,10 @@
 			Also there is the search scene, which will send search requests up to your server and back. This is usually the fastest way to your music if you know what you are looking for.<br>
 			<br>
 			<strong>TIP:</strong> Just start typing on the main menu and it will automatically navigate to the search scene.<br>
+			<br>
+			<strong>Sorting</strong>
+			<hr>
+			On any list simply tap and hold the black header on the top of the screen and a list will appear allowing you to resort.<br>
 			<br>
 			<strong>Lists</strong>
 			<hr>
