* Added video search * Added no items found message and buttons

--- a/src/app/views/search-menu/search-menu-scene.html
+++ b/src/app/views/search-menu/search-menu-scene.html
@@ -105,7 +105,22 @@
 
                     <div class="search-enter"><img id="search-Playlists" name="search-Playlists"></div>
                 </div>
-            </div><!--
+            </div>
+            <div class="palm-row" id='searchVideos' x-mojo-tap-highlight="momentary">
+                <div class="palm-row-wrapper">
+                    <div class="mainMenuLeft">
+                        <div class="mainMenuTitle">
+                            Videos
+                        </div>
+                    </div>
+
+                    <div class="search-icon"><img class="mainMenuIcon" src="images/icons/videos.png"></div>
+
+                    <div class="search-enter"><img id="search-Videos" name="search-videos"></div>
+                </div>
+            </div>
+            
+            <!--
             <div class="palm-row" id='searchGenres' x-Mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
