--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -1,24 +1,15 @@
 <hr>
 
 <div class="new-version-header">
-    Version 0.9.3 (04/26/2010)
+    Version 0.9.4 (04/27/2010)
 </div>
 <hr>
 
 <div class="new-version-header">
-    <b>New Feature</b>
+    <b>Improvements</b>
 
     <ul class="new-version-list">
-	<li>Video Playback
-
-	    <ul class="new-version-list">
-		<li>Playback of Videos indexed by Amapache which webOS supports. m4v seem to work the best.</li>
-
-		<li>Using Palm Video Player for streaming playback. Launches in seperate window.</li>
-
-		<li>Ampache has no video transcoding yet, so videos must be preconverted. I've found handbreak to work best.</li>
-	    </ul>
-	</li>
+	<li>Video Search</li>
     </ul>
 </div>
 
@@ -27,5 +18,5 @@
 </div>
 
 <ul class="new-version-list">
-    <li>Delete confirmation turned off in now playing list, on now.</li>
+    <li>Type to search broken.</li>
 </ul>
