--- a/src/app/views/whatsnew/old-versions.html
+++ b/src/app/views/whatsnew/old-versions.html
@@ -1,3 +1,36 @@
+<hr>
+
+<div class="new-version-header">
+    Version 0.9.3 (04/26/2010)
+</div>
+<hr>
+
+<div class="new-version-header">
+    <b>New Feature</b>
+
+    <ul class="new-version-list">
+	<li>Video Playback
+
+	    <ul class="new-version-list">
+		<li>Playback of Videos indexed by Amapache which webOS supports. m4v seem to work the best.</li>
+
+		<li>Using Palm Video Player for streaming playback. Launches in seperate window.</li>
+
+		<li>Ampache has no video transcoding yet, so videos must be preconverted. I've found handbreak to work best.</li>
+	    </ul>
+	</li>
+    </ul>
+</div>
+
+<div class="new-version-header">
+    <b>Bug Fixes</b>
+</div>
+
+<ul class="new-version-list">
+    <li>Delete confirmation turned off in now playing list, on now.</li>
+</ul>
+
+
 <hr><div class="new-version-header">
     Version 0.9.2 (04/21/2010)
 </div><hr>
