New Feature: Saved Searches  * Allows you to quickly search for things you are always looking for  * Includes date limiting  * Tap and Hold Search from main menu for quick access

--- a/src/app/views/search-menu/search-menu-scene.html
+++ b/src/app/views/search-menu/search-menu-scene.html
@@ -19,9 +19,9 @@
 
     <div id="spacerDiv" class="music-header-spacer"></div>
 
-    <div id="search-group" class="palm-group unlabeled mainMenuList">
+    <div id="search-group " class="palm-group unlabeled mainMenuList search-searchmenu" >
         <div id="search-list" class="palm-list">
-            <div class="palm-row first">
+            <div class="palm-row first mainmenu-row">
                 <div class="palm-row-wrapper textfield-group" x-mojo-focus-highlight="true">
                     <div class="title">
                         <!--<div class="icon search left"><img class="mainMenuIcon" src="images/icons/search.png"></div>                                       -->
@@ -51,7 +51,7 @@
                 <!--</div>-->
             </div>
 
-            <div class="palm-row" id='searchArtists' x-mojo-tap-highlight="momentary">
+            <div class="palm-row mainmenu-row" id='searchArtists' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
                         <div class="mainMenuTitle">
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="palm-row" id='searchAlbums' x-mojo-tap-highlight="momentary">
+            <div class="palm-row mainmenu-row" id='searchAlbums' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
                         <div class="mainMenuTitle">
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            <div class="palm-row" id='searchSongs' x-mojo-tap-highlight="momentary">
+            <div class="palm-row mainmenu-row" id='searchSongs' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
                         <div class="mainMenuTitle">
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <div class="palm-row" id='searchPlaylists' x-mojo-tap-highlight="momentary">
+            <div class="palm-row mainmenu-row" id='searchPlaylists' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
                         <div class="mainMenuTitle">
@@ -106,7 +106,7 @@
                     <div class="search-enter"><img id="search-Playlists" name="search-Playlists"></div>
                 </div>
             </div>
-            <div class="palm-row" id='searchVideos' x-mojo-tap-highlight="momentary">
+            <div class="palm-row mainmenu-row" id='searchVideos' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
                         <div class="mainMenuTitle">
@@ -137,7 +137,7 @@
                 </div>
             </div>-->
 
-            <div class="palm-row last" id='searchGlobal' x-mojo-tap-highlight="momentary">
+            <div class="palm-row last mainmenu-row" id='searchGlobal' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
                         <div class="mainMenuTitle">
