--- a/src/app/views/whatsnew/new-version.html
+++ b/src/app/views/whatsnew/new-version.html
@@ -18,5 +18,6 @@
 </div>
 
 <ul class="new-version-list">
-    <li>Type to search broken.</li>
+    <li>Type to search in video scene broken.</li>
+    <li>Banner notications didn't show up when in app but away from now playing screen.</li>
 </ul>
